--- a/SettingsWindow.xaml
+++ b/SettingsWindow.xaml
@@ -40,14 +40,14 @@
                     WindowChrome.IsHitTestVisibleInChrome="True"
                     VerticalAlignment="Top" HorizontalAlignment="Right" Margin="11,4">
                 <TextBlock Text="&#xf00d;" FontFamily="{StaticResource FontAwesomeSolid}" 
-                        Foreground="GhostWhite" FontSize="34" Background="#292a2a"
+                        Foreground="#f4f1f0" FontSize="34" Background="#292a2a"
                         VerticalAlignment="Top"></TextBlock>
             </Button>
 
-            <Label Content="Hotkey Setup" Grid.Row="1" Foreground="GhostWhite" FontSize="17" 
+            <Label Content="Hotkey Setup" Grid.Row="1" Foreground="#f4f1f0" FontSize="17" 
                    HorizontalAlignment="Left" VerticalAlignment="Center"></Label>
-            
-            <Label Content="Key" Grid.Column="1" Grid.Row="1" Foreground="GhostWhite"
+
+            <Label Content="Key" Grid.Column="1" Grid.Row="1" Foreground="#f4f1f0"
                    FontSize="17" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
             
             <TextBox x:Name="txtHotKey" PreviewKeyUp="txtHotKey_PreviewKeyUp"
@@ -56,7 +56,7 @@
                      Grid.Row="2" Grid.Column="1" Width="Auto" MaxLength="1">                
             </TextBox>
 
-            <Label Content="Modifier" Grid.Column="2" Grid.Row="1" Foreground="GhostWhite"
+            <Label Content="Modifier" Grid.Column="2" Grid.Row="1" Foreground="#f4f1f0"
                 FontSize="17" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
             <ComboBox Name="ddlMod" Grid.Column="2" Grid.Row="2" Width="111" FontSize="17"
                 HorizontalAlignment="Left" SelectionChanged="HotkeySelection_SelectionChanged"></ComboBox>
