--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClipClop"        
-        mc:Ignorable="d" Closing="Window_Closing"
+        mc:Ignorable="d" Closing="Window_Closing" AllowsTransparency="True"
         SourceInitialized="Window_SourceInitialized"
         BorderThickness="0" WindowStyle="None" ShowInTaskbar="False"
         xmlns:tb="http://www.hardcodet.net/taskbar"
