--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 		x:DataType="local:MainWindow" MinWidth="500" MinHeight="500"
         x:Class="ClipClop.MainWindow" Loaded="Window_Loaded" Closing="Window_Closing"
-        Title="Clip Clop" TransparencyLevelHint="AcrylicBlur"
+        Title="Clip Clop" TransparencyLevelHint="AcrylicBlur" 
            Background="Transparent"
            ExtendClientAreaToDecorationsHint="True">
 	<Window.Resources>
@@ -91,7 +91,7 @@
 					<RowDefinition Height="60"></RowDefinition>
 				</Grid.RowDefinitions>
 				<ListBox x:Name="lbItems" ItemsSource="{Binding VisibleClipItems}"
-						 Background="Transparent" Padding="5"
+						 Background="Transparent" Padding="5" TabIndex="0" Focusable="True"
 						  KeyUp="ListBox_KeyUp">
 					<ListBox.ItemTemplate>
 						<DataTemplate>
